<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="32dp"
    android:layout_marginVertical="16dp"
    android:gravity="center"
    tools:context=".LinearLayoutActivity">

    <Button
        android:id="@+id/btn_task_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/linearlayout"
        />

    <Button
        android:id="@+id/btn_task_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/relativelayout"
        />

    <Button
        android:id="@+id/btn_task_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/constraintlayout"
        />

    <Button
        android:id="@+id/btn_task_four"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/framelayout"
        />

    <Button
        android:id="@+id/btn_task_five"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/loginscreen"
        />

    <Button
        android:id="@+id/btn_task_six"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/listview"
        />

    <Button
        android:id="@+id/btn_task_seven"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/recyclerview"
        />

</LinearLayout>